some additional modifications to complete merging master