@@ -21,10 +21,14 @@ public class METAXblock extends PragmaBlock {
       e.printStackTrace();
     }
     try {
-      metaxObj = metaxClass.newInstance();
+      metaxObj = metaxClass.getDeclaredConstructor().newInstance();
     } catch (InstantiationException e){
       e.printStackTrace();
     } catch (IllegalAccessException e){
+      e.printStackTrace();
+    } catch (NoSuchMethodException e){
+      e.printStackTrace();
+    } catch (InvocationTargetException e){
       e.printStackTrace();
     }
     try {
